# py.nozzle

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  pyproject.toml
.github/workflows/: ci.yml
scripts/: build_packages.py  release_package_artifacts.py  smoke_installed_package.py  verify_package_artifacts.py
src/: nozzle.cpp
src/nozzle/: __init__.py
tests/: test_basic.py
tests/installed/: test_api_surface.py  test_package_metadata.py
