[build-system]
requires = ["scikit-build-core >=0.12", "nanobind >=1.3.2"]
build-backend = "scikit_build_core.build"

[project]
name = "nozzle-io"
version = "0.1.0"
description = "Python bindings for nozzle - inter-process GPU texture sharing"
requires-python = ">=3.12"
dependencies = ["numpy"]

[tool.scikit-build]
minimum-version = "0.12"
build-dir = "build/{wheel_tag}"
wheel.py-api = "cp312"
wheel.packages = ["src/nozzle"]

[tool.scikit-build.sdist]
include = [
  "libs/nozzle/CMakeLists.txt",
  "libs/nozzle/LICENSE",
  "libs/nozzle/cmake/**",
  "libs/nozzle/include/**",
  "libs/nozzle/src/**",
  "libs/nozzle/libs/plog/include/**",
]
exclude = [
  ".github/**",
  ".git",
  ".git/**",
  ".gitignore",
  ".gitmodules",
  "uv.lock",
  "libs/nozzle/.git",
  "libs/nozzle/.git/**",
  "libs/nozzle/.github/**",
  "libs/nozzle/.gitignore",
  "libs/nozzle/.gitmodules",
  "libs/nozzle/AGENTS.md",
  "libs/nozzle/DEVELOPMENT.md",
  "libs/nozzle/PLAN.md",
  "libs/nozzle/README*.md",
  "libs/nozzle/build/**",
  "libs/nozzle/_skbuild/**",
  "libs/nozzle/examples/**",
  "libs/nozzle/scripts/**",
  "libs/nozzle/tests/**",
  "libs/nozzle/tools/**",
  "libs/nozzle/libs/plog/.appveyor.yml",
  "libs/nozzle/libs/plog/.circleci/**",
  "libs/nozzle/libs/plog/.cirrus.yml",
  "libs/nozzle/libs/plog/.editorconfig",
  "libs/nozzle/libs/plog/.github/**",
  "libs/nozzle/libs/plog/.gitignore",
  "libs/nozzle/libs/plog/CMakeLists.txt",
  "libs/nozzle/libs/plog/README.md",
  "libs/nozzle/libs/plog/doc/**",
  "libs/nozzle/libs/plog/library.json",
  "libs/nozzle/libs/plog/plog.nuspec",
  "libs/nozzle/libs/plog/plog.targets",
  "libs/nozzle/libs/plog/samples/**",
  "libs/nozzle/libs/plog/test/**",
  "libs/nozzle/**/__pycache__/**",
  "libs/nozzle/**/.pytest_cache/**",
]
